SidebarMenü&DynamicForm added
Dazu auch noch ein paar verschönerungen und interaktionen.

--- a/index.html
+++ b/index.html
@@ -3,58 +3,100 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>MA</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/absenzenformular.css" />
+    <script src="JS/absenzenformular.js"></script>   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     
-<header>Titel</header>
-<aside>Sidebar</aside>
+<header class="navbar">
 
-<main>
+    <span class="open-slide" id="open-slide">
+        <a href="#" onclick="openSideMenu()">
+            <svg width="30"height="30">
+                <path d="M0,5 30,5" stroke="#fff" stroke-width="5"/>
+                <path d="M0,14 30,14" stroke="#fff" stroke-width="5"/>
+                <path d="M0,23 30,23" stroke="#fff" stroke-width="5"/>
+            </svg>
+        </a>
+    </span>
+
+    <div id="side-menu" class="side-nav">
+        <a href="#" class="btn-close" onclick="closeSideMenu()">&times;</a>
+        <a href="#" id="active">Eintragen</a>
+        <a href="#">Absenzen</a>
+        <a href="#">Optionen</a>
+        <a href="#">Feedback</a>
+    </div>
+
+</header>
+
+<main id="main">
 
 <div class="absenzenformular">
     <!-- Fächer-Input -->
     <div class="faecher-input">
-        <!-- inputfield -->
+        <table id="fachTable">
+            <tr id="zelle">
+            <td>
+            <!-- inputfield -->
+            <div class="inputfield" id="fach">
+                <label>Faecher</label>
+                <input list="fächer" name="fach">
+                <datalist id="fächer">
+                    <option value="Deutsch">
+                    <option value="Physik">
+                    <option value="Sport">
+                </datalist>
+            </div>
+            </td>
+            </tr>
+        </table> 
+        <input type="button" value="+" id="plusbutton" onclick="addRow()">
+    </div>
+
+    <div id="nichtfaecher-input">
+        
+        <!-- Anzahl lektionen-->
         <div class="inputfield">
-            <label>Faecher</label>
-            <input list="fächer" name="fach">
-            <datalist id="fächer">
-                <option value="Deutsch">
-                <option value="Physik">
-                <option value="Sport">
-            </datalist>
+            <label>Anzahl Lektionen</label>
+            <input type="text" id="lektionenanzahl">
         </div>
-        <input type="button" value="+" id="plusbutton">
-    </div>
 
-    <!-- Anzahl lektionen-->
-    <div class="inputfield">
-        <label>Anzahl Lektionen</label>
-        <input type="text" id="lektionenanzahl">
-    </div>
+        <!-- Begründung -->
+        <div class="inputfield">
+            <label>Begruendung</label>
+            <textarea id="begruendung" cols="30" rows="1"></textarea>
+        </div>
 
-    <!-- Begründung -->
-    <div class="inputfield">
-        <label>Begruendung</label>
-        <textarea id="begruendung" cols="30" rows="1"></textarea>
-    </div>
+        <!-- Datum -->
+        <div class="inputfield" >
+            <label>Datum</label>
+            <input type="date" id="date">
+        </div>
 
-    <!-- Datum -->
-    <div class="inputfield" >
-        <label>Datum</label>
-        <input type="date" id="date">
-    </div>
+        <!-- Absenden -->
+        <input type="button" value="Absenden" id="absenden">
 
-    <!-- Absenden -->
-    <input type="button" value="Absenden" id="absenden">
-
+    </div>      
 </div>
 
 </main>
+
+<script>
+    function openSideMenu(){
+        document.getElementById("side-menu").style.width = "250px";
+        //document.getElementById("main").style.marginLeft = "250px";
+    }
+
+    function closeSideMenu(){
+        document.getElementById("side-menu").style.width = "0px";
+        //document.getElementById("main").style.marginLeft = "0px";
+    }
+</script>
 
 <footer><div>Hannes Eybl<br>2018</div></footer>
 
