--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/absenzenformular.css" />
     <script src="JS/absenzenformular.js"></script>   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 </head>
+
+<!--
+    Wireframe für diese Website: https://wireframe.cc/S5QzmB
+-->
 
 <body>
     
-<header class="navbar">
+<header class="navbar" id="navbar">
 
     <span class="open-slide" id="open-slide">
         <a href="#" onclick="openSideMenu()">
@@ -39,13 +44,15 @@
 <div class="absenzenformular">
     <!-- Fächer-Input -->
     <div class="faecher-input">
+        <!-- Dieses Table enthält alle "Fächer"-Eingabefelder -->
         <table id="fachTable">
             <tr id="zelle">
             <td>
             <!-- inputfield -->
             <div class="inputfield" id="fach">
-                <label>Faecher</label>
+                <label>Fächer</label>
                 <input list="fächer" name="fach">
+                <!-- Alle auswählbaren Fächer -->
                 <datalist id="fächer">
                     <option value="Deutsch">
                     <option value="Physik">
@@ -68,7 +75,7 @@
 
         <!-- Begründung -->
         <div class="inputfield">
-            <label>Begruendung</label>
+            <label>Begründung</label>
             <textarea id="begruendung" cols="30" rows="1"></textarea>
         </div>
 
